# slack-rtm-connection

./: LICENSE  README.md  slack-rtm-connection.cabal  stack.yaml
app/: Main.hs
src/Network/RTM/Slack/: Connection.hs
test/: Spec.hs
