name:                slack-rtm-connection
version:             0.1.0.0
synopsis:            Slack RTM connection which notifies about events, maintains state and also accepts new messages
description:         Please see README.md
homepage:            https://github.com/CthulhuDen/slack-rtm-connection#readme
license:             BSD3
license-file:        LICENSE
author:              Cthulhu
maintainer:          cthulhu.den@gmail.com
copyright:           2017 Cthulhu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.RTM.Slack.Connection
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , lens
                     , slack-api
                     , slack-rtm-state
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  default-language:    Haskell2010

executable slack-rtm-connection
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , lens
                     , slack-rtm-connection
                     , classy-prelude
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  default-language:    Haskell2010

test-suite slack-rtm-connection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-rtm-connection
                     , classy-prelude
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CthulhuDen/slack-rtm-connection
